# crewai_dep

./: README.md  pyproject.toml
src/pcavd02/: crew.py  main.py
src/pcavd02/config/: agents.yaml  tasks.yaml
